--- a/src/app/login-form/login.component.html
+++ b/src/app/login-form/login.component.html
@@ -2,6 +2,13 @@
 <section>
   <div id="container">
     <div class="row">
+      <div class="row mx-auto text-center" *ngIf="!isSignedIn">
+        <h3>Please Login Below</h3>
+        <div class="align-center">
+          <div class="g-signin2" id="googleLoginBtn"></div>
+
+        </div>
+      </div>
       <div class="col-lg-8 mx-auto text-center">
         <div class="row mx-auto text-center" *ngIf="isSignedIn">
           <div class="row">
@@ -15,11 +22,7 @@
               {{user.email}}
             </div>
           </div>
-          <button class="btn btn-danger" id="googleLogoutBtn" (click)="signOutUser()">Logout</button>
-        </div>
-        <div class="row mx-auto text-center" *ngIf="!isSignedIn">
-          <h3>Please Login Below</h3>
-          <button class="g-signin2" id="googleLoginBtn" (click)="getSignedInUser()">Sign In</button>
+          <!--<button class="btn btn-danger" id="googleLogoutBtn" (click)="signOutUser()">Logout</button>-->
         </div>
       </div>
     </div>
