--- a/src/app/login-form/login.component.html
+++ b/src/app/login-form/login.component.html
@@ -6,20 +6,19 @@
         <h3>Please Login Below</h3>
         <div class="align-center">
           <div class="g-signin2" id="googleLoginBtn"></div>
-
         </div>
       </div>
-      <div class="col-lg-8 mx-auto text-center">
-        <div class="row mx-auto text-center" *ngIf="isSignedIn">
+      <div id="user-details" class="col-lg-8 mx-auto text-center" *ngIf="isSignedIn">
+        <div class="row mx-auto text-center">
           <div class="row">
             <div class="row mx-auto text-center">
-              <img [src]=user.imageUrl>
+              -----><img [src]=user.imageUrl>
             </div>
             <div class="row mx-auto text-center">
-              {{user.name}}
+              ----->{{user.name}}
             </div>
             <div class="row mx-auto text-center">
-              {{user.email}}
+              ----->{{user.email}}
             </div>
           </div>
           <!--<button class="btn btn-danger" id="googleLogoutBtn" (click)="signOutUser()">Logout</button>-->
