adding user details on login

--- a/src/app/login-form/login.component.html
+++ b/src/app/login-form/login.component.html
@@ -12,13 +12,13 @@
         <div class="row mx-auto text-center">
           <div class="row">
             <div class="row mx-auto text-center">
-              -----><img [src]=user.imageUrl>
+              <img [src]=user.imageUrl>
             </div>
             <div class="row mx-auto text-center">
-              ----->{{user.name}}
+              {{user.name}}
             </div>
             <div class="row mx-auto text-center">
-              ----->{{user.email}}
+              {{user.email}}
             </div>
           </div>
           <!--<button class="btn btn-danger" id="googleLogoutBtn" (click)="signOutUser()">Logout</button>-->
