--- a/src/app/facebook-login-form/facebook-login.component.html
+++ b/src/app/facebook-login-form/facebook-login.component.html
@@ -1,12 +1,24 @@
 
-<div>
-  <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLoginClick()" *ngIf="showSignInButton" id="login-facebook">
-    <i class="fa fa-facebook fa-fw"></i>Sign in with Facebook
-  </button>
-</div>
-
-<div>
-  <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLogoutClick()" *ngIf="showSignOutButton" id="logout-facebook">
-    <i class="fa fa-facebook fa-fw"></i>Sign out
-  </button>
-</div>
+<section>
+  <div id="container">
+    <div class="row mx-auto text-center">
+      <h3>Please Login using Facebook</h3>
+      <div class="row">
+        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLoginClick()" *ngIf="showSignInButton" id="login-facebook">
+          <i class="fa fa-facebook fa-fw"></i>Sign in with Facebook
+        </button>
+      </div>
+    </div>
+    <div class="row mx-auto text-center">
+      <div *ngIf="showSignOutButton">
+        {{user.id}}
+        {{user.name}}
+        {{user.email}}
+        <img [src]=user.imageUrl>
+        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLogoutClick()" id="logout-facebook">
+          <i class="fa fa-facebook fa-fw"></i>Sign out
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
