--- a/src/app/facebook-login-form/facebook-login.component.html
+++ b/src/app/facebook-login-form/facebook-login.component.html
@@ -1,20 +1,20 @@
 
 <section>
   <div id="container">
-    <div class="row mx-auto text-center">
+    <div class="row mx-auto text-center" *ngIf="showSignInButton">
       <h3>Please Login using Facebook</h3>
       <div class="row">
-        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLoginClick()" *ngIf="showSignInButton" id="login-facebook">
+        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLoginClick()" id="login-facebook">
           <i class="fa fa-facebook fa-fw"></i>Sign in with Facebook
         </button>
       </div>
     </div>
-    <div class="row mx-auto text-center">
-      <div *ngIf="showSignOutButton">
-        {{user.id}}
-        {{user.name}}
-        {{user.email}}
-        <img [src]=user.imageUrl>
+    <div class="row mx-auto text-center" *ngIf="showSignOutButton">
+      <div>
+        <div>User ID: {{user.id}}</div>
+        <div>Name: {{user.name}}</div>
+        <div>Email: {{user.email}}</div>
+        <div><img [src]=user.imageUrl></div>
         <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLogoutClick()" id="logout-facebook">
           <i class="fa fa-facebook fa-fw"></i>Sign out
         </button>
