--- a/src/app/facebook-login-form/facebook-login.component.html
+++ b/src/app/facebook-login-form/facebook-login.component.html
@@ -2,8 +2,8 @@
 <section>
   <div id="container">
     <div class="row mx-auto text-center" *ngIf="showSignInButton">
-      <h3>Please Login using Facebook</h3>
-      <div class="row">
+      <div><h3>Please Login using Facebook</h3></div>
+      <div class="row mx-auto text-center">
         <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLoginClick()" id="login-facebook">
           <i class="fa fa-facebook fa-fw"></i>Sign in with Facebook
         </button>
