--- a/src/app/facebook-login-form/facebook-login.component.html
+++ b/src/app/facebook-login-form/facebook-login.component.html
@@ -4,7 +4,7 @@
     <div class="row mx-auto text-center" *ngIf="showSignInButton">
       <div><h3>Please Login using Facebook</h3></div>
       <div class="row mx-auto text-center">
-        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLoginClick()" id="login-facebook">
+        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLogin()" id="login-facebook">
           <i class="fa fa-facebook fa-fw"></i>Sign in with Facebook
         </button>
       </div>
@@ -15,7 +15,7 @@
         <div>Name: {{user.name}}</div>
         <div>Email: {{user.email}}</div>
         <div><img [src]=user.imageUrl></div>
-        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLogoutClick()" id="logout-facebook">
+        <button class="btn btn-lg btn-social btn-facebook" style="font-size: 1.5em;" (click)="onFacebookLogout()" id="logout-facebook">
           <i class="fa fa-facebook fa-fw"></i>Sign out
         </button>
       </div>
